# agri-subsidy

./: .gitignore  README.md  gen_keys.py
.agents/skills/local-dev/: SKILL.md
agent/: .dockerignore  .env.example  .gitignore  Dockerfile  ai_agent.py  config.py  fallback_agent.py  generate_keypair.py  init_setup.py  main.py  models.py  ndvi_service.py  requirements.txt  scoring_engine.py  solana_bridge.py  weather_service.py
contracts/: Anchor.toml
contracts/programs/agri_subsidy/: Cargo.toml
contracts/programs/agri_subsidy/src/: lib.rs
contracts/tests/: agri_subsidy.test.ts
dashboard/: package-lock.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: AILogStream.jsx  FarmerCard.jsx  Header.jsx  Landing.jsx  ScoreGauge.jsx  StatsPanel.jsx  TxConfirmation.jsx  landing.css
dashboard/src/hooks/: useSSE.js
